# hitalent

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  pyproject.toml  wait_for_postgres.py
alembic/: env.py
alembic/versions/: 9c21b2d2f834_initial_migration.py
app/: main.py
app/api/chat/: __init__.py  exceptions.py  repository.py  router.py  schemas.py  service.py
app/core/: settings.py
app/core/database/: __init__.py  core.py
app/core/database/mixins/: __init__.py  primary_key.py  timestamp.py
app/core/database/models/: __init__.py  chat.py  message.py
tests/: conftest.py
tests/unit_tests/: test_service.py
