[tool.poetry]
name = "hitalent"
version = "0.1.0"
description = ""
authors = ["vladislav <zackieffv@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12"
fastapi = ">=0.128.0,<0.129.0"
uvicorn = { extras = ["standard"], version = ">=0.40.0,<0.41.0" }
sqlalchemy = ">=2.0.45,<3.0.0"
asyncpg = ">=0.31.0,<0.32.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
alembic = ">=1.18.1,<2.0.0"
pydantic-settings = ">=2.12.0,<3.0.0"
python-dotenv = ">=1.2.1,<2.0.0"
pytest = "^9.0.2"
black = "^26.1.0"
isort = "^7.0.0"
ruff = "^0.14.14"
aiosqlite = "^0.22.1"
pytest-asyncio = "^1.3.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "black (>=26.1.0,<27.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.14,<0.15.0)"
]

[tool.black]
line-length = 88
target-version = ["py311"]
exclude = '''
/(
    \.venv
  | \.env
  | venv
  | env
  | migrations
  | alembic/versions
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["app"]
skip = [
  ".venv",
  ".env",
  "venv",
  "env",
  "migrations",
  "alembic/versions",
  "__pycache__",
  "build",
  "dist"
]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [
  ".venv",
  ".env",
  "venv",
  "env",
  "migrations",
  "alembic/versions",
  "__pycache__",
  "build",
  "dist",
]

[tool.ruff.lint]
select = [
  "E",
  "F",
  "B",
  "I",
  "UP",
]
ignore = [
  "B008",  # FastAPI Depends
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-vvv"
